# SoftSysOlinCoin

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  annotated.html  base__block_8h_source.html  base__tx_8h_source.html  blockchain_8h_source.html  chef_8h_source.html  classes.html  compile_flags.txt  constants_8h_source.html  create__block_8h.html  create__block_8h__dep__incl.map  create__block_8h__dep__incl.md5  create__block_8h__incl.map  create__block_8h__incl.md5  create__block_8h_source.html  crypto_8h_source.html  dir_000000_000010.html  dir_000002_000010.html  dir_000004_000010.html  dir_000005_000010.html  dir_000012_000010.html  dir_000012_000011.html  dir_000015_000010.html  dir_000016_000010.html  dir_000018_000010.html  dir_0571e7051376f6adf1c8bfdc3cfc25bf.html  dir_0571e7051376f6adf1c8bfdc3cfc25bf_dep.map  dir_0571e7051376f6adf1c8bfdc3cfc25bf_dep.md5  dir_0ce55fe7315a6df003a543100401ee09.html  dir_0ce55fe7315a6df003a543100401ee09_dep.map  dir_0ce55fe7315a6df003a543100401ee09_dep.md5  dir_0f94247a658728c79c1595ddd46258d5.html  dir_0f94247a658728c79c1595ddd46258d5_dep.map  dir_0f94247a658728c79c1595ddd46258d5_dep.md5  dir_31405c026f2bdef69b0a32b9360b7cef.html  dir_31405c026f2bdef69b0a32b9360b7cef_dep.map  (+154 more)
reports/: proposal.md  proposal2.md  report.md  report_2.md  update.md  update2.md
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_6.js  all_7.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_1.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  searchdata.js
src/: .gitignore  CMakeLists.txt  mbed  serializing_tests.c  test
src/core/: CMakeLists.txt
src/core/blocks/: CMakeLists.txt  base_block.c  create_block.c  handle_block.c  ser_block.c  validate_block.c
src/core/globals/: CMakeLists.txt  blockchain.c  constants.c  double_spend_set.c  init_globals.c  list.c  mempool.c  shell.c  utxo_pool.c  utxo_to_tx.c
src/core/txs/: CMakeLists.txt  base_tx.c  build_tx.c  handle_tx.c  ser_tx.c  ser_wallet.c  sign_tx.c  validate_tx.c  wallet.c  wallet_pool.c
src/core/utils/: CMakeLists.txt  crypto.c  init_db.c  queue.c  ser_key.c
src/includes/: CMakeLists.txt
src/includes/blocks/: CMakeLists.txt  base_block.h  create_block.h  handle_block.h  ser_block.h  validate_block.h
src/includes/globals/: CMakeLists.txt  blockchain.h  constants.h  double_spend_set.h  init_globals.h  list.h  mempool.h  shell.h  utxo_pool.h  utxo_to_tx.h
src/includes/tests/: CMakeLists.txt
src/includes/txs/: CMakeLists.txt  base_tx.h  build_tx.h  handle_tx.h  ser_tx.h  ser_wallet.h  sign_tx.h  validate_tx.h  wallet.h  wallet_pool.h
src/includes/utils/: CMakeLists.txt  crypto.h  init_db.h  queue.h  ser_key.h
src/runtime/: CMakeLists.txt  client.c  queue_client.c  queue_server.c  runtime.c  server.c  shell.c
src/runtime/includes/: CMakeLists.txt  client.h  runtime.h  server.h  shell.h
src/tests/: CMakeLists.txt
src/tests/core/: CMakeLists.txt
src/tests/core/blocks/: CMakeLists.txt  test_create_block.c  test_handle_block.c  test_ser_block.c  test_validate_block.c
src/tests/core/fixtures/: CMakeLists.txt  fixtures_block.c  fixtures_global.c  fixtures_tx.c  fixtures_wallet.c
src/tests/core/global/: CMakeLists.txt  test_blockchain.c  test_constants.c  test_leveldb.c  test_list.c  test_mempool.c  test_utxo_pool.c  test_utxo_to_tx.c
src/tests/core/global/chef_wrap/: CMakeLists.txt
src/tests/core/txs/: CMakeLists.txt  test_base_tx.c  test_handle_tx.c  test_ser_tx.c  test_ser_wallet.c  test_validate_tx.c  test_wallet.c  test_wallet_pool.c
src/tests/core/utils/: CMakeLists.txt  test_crypto.c  test_queue.c  test_ser_key.c
src/tests/includes/: CMakeLists.txt
src/tests/includes/fixtures/: CMakeLists.txt  fixtures_block.h  fixtures_global.h  fixtures_tx.h  fixtures_wallet.h
